--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -51,7 +51,7 @@
 											<li><img src="images/ckddbf.jpg" alt=""style="width: 180px; height: 200px; border: 0;"></li>
 										</ul>
 										<header>
-											<h2 class="black">유종원　김재현　김시언　김창율　이호진</h2>
+											<h2 class="black">유종원　김재현　김시언　이호잔　김창율</h2>
 										</header>
 										
 									</section>
