--- a/qkfvy.html
+++ b/qkfvy.html
@@ -47,10 +47,9 @@
 
 											<header>
 												<h2>결과 자료 및 발표 자료</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<p>Liberation</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li><h2><a href="https://github.com/kimjaehyun1450/caps" class="blue">리드미 보러가기</a></h2></li>
 												</ul>
 											</header>
 
