--- a/qkfvy.html
+++ b/qkfvy.html
@@ -49,7 +49,9 @@
 												<h2>결과 자료 및 발표 자료</h2>
 												<p>Liberation</p>
 												<ul class="meta">
-													<li><h2><a href="https://github.com/kimjaehyun1450/caps" class="blue">리드미 보러가기</a></h2></li>
+													<li><h2><a href="https://github.com/kimjaehyun1450/caps" class="blue">기획서 발표자료</a></h2></li>
+													<li><h2><a href="https://github.com/kimjaehyun1450/caps" class="blue">중간발표 발표자료</a></h2></li>
+													<li><h2><a href="https://github.com/kimjaehyun1450/caps" class="blue">최종발표 발표자료</a></h2></li>
 												</ul>
 											</header>
 
