--- a/qkfvy.html
+++ b/qkfvy.html
@@ -49,7 +49,7 @@
 												<h2>결과 자료 및 발표 자료</h2>
 												<p>Liberation</p>
 												<ul class="meta">
-													<li><h2><a href="https://github.com/ksyjsas1121/Liberation" class="blue">깃허브 저장소</a></h2></li>
+													<p><li><h2><a href="https://github.com/ksyjsas1121/Liberation" class="blue">깃허브 저장소</a></h2></li></p>
 													
 													
 													<p><li><h2><a href="https://github.com/ksyjsas1121/Liberation/blob/main/Liberation-%EC%BA%A1%EC%8A%A4%ED%86%A4-%EA%B8%B0%ED%9A%8D%EC%84%9C-%EB%B0%9C%ED%91%9C-PPT.pptx" class="blue">기획서 발표자료</a></h2></li></p>
