--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">경북소프트웨어고등학교 1학기 캡스톤 프로잭트</a></h1>
+							<h1><a href="index.html" id="logo">경북소프트웨어고등학교 1학기 캡스톤 프로젝트</a></h1>
 							<p></p>
 						</div>
 					</div>
